--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,8 +4,8 @@ chardet==3.0.4
 Django==3.0.3
 djangorestframework==3.11.0
 idna==2.8
+psycopg2==2.8.5
 pytz==2019.3
 requests==2.22.0
 sqlparse==0.3.0
 urllib3==1.25.8
-psycopg2
