--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,7 @@
     "react-markdown": "^4.3.1",
     "react-markdown-editor-lite": "^1.0.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.1",
+    "react-scripts": "^3.4.1",
     "web3": "^1.2.6"
   },
   "scripts": {
